--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
 
-    background-color: #6A26CD;
+    background-color: #FE5430;
     height: 80px;
     display: flex;
     justify-content: start;
@@ -14,7 +14,7 @@
   }
   
   .nav-menu {
-    background-color: #1F1A36;
+    background-color: #070D2D;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -53,7 +53,7 @@
   }
   
   .nav-text a:hover {
-    background-color: #6A26CD;
+    background-color: #FE5430;
   }
   
   .nav-menu-items {
@@ -61,7 +61,7 @@
   }
   
   .navbar-toggle {
-    background-color: #1F1A36;
+    background-color: #070D2D;
     width: 100%;
     height: 80px;
     display: flex;
