Mudança na tabela e navegação da página

--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,14 @@
 }
 
 
-.home, .reports, .products {
+.home, .personais, .configu {
   
     height: 90vh;
     align-items: center;
     justify-content: center;
     font-size: 3rem;
+}
+
+.alunos {
+    padding-top: 10%;
 }
